--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
                         <div class="card-img"></div>
                         <div class="card-desc">
                             <h2 class="title card-title">Formation</h2>
-                            <p class="text card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio aut, aperiam perspiciatis nesciunt rem! Soluta esse, velit perspiciatis voluptatem in nesciunt, ipsa est aspernatur sunt enim, impedit iure. Praesentium!</p>
+                            <p class="text card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio aut, aperiam perspiciatis nesciunt rem!</p>
                             <a href="#" class="text action card-action">See more</a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-img"></div>
                         <div class="card-desc">
-                            <h2 class="title card-title">Ca, c'est moi</h2>
-                            <p class="text card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio aut, aperiam perspiciatis nesciunt rem! Soluta esse, velit perspiciatis voluptatem in nesciunt, ipsa est aspernatur sunt enim, impedit iure. Praesentium!</p>
+                            <h2 class="title card-title">Ça, c'est moi</h2>
+                            <p class="text card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio aut, aperiam perspiciatis nesciunt rem!</p>
                             <a href="#" class="text action card-action">See more</a>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                         <div class="card-img"></div>
                         <div class="card-desc">
                             <h2 class="title card-title">Compétences</h2>
-                            <p class="text card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio aut, aperiam perspiciatis nesciunt rem! Soluta esse, velit perspiciatis voluptatem in nesciunt, ipsa est aspernatur sunt enim, impedit iure. Praesentium!</p>
+                            <p class="text card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed distinctio aut, aperiam perspiciatis nesciunt rem!</p>
                             <a href="#" class="text action card-action">See more</a>
                         </div>
                     </div>
