starting about page

--- a/about.html
+++ b/about.html
@@ -34,5 +34,17 @@
 
         <a href="#" class="action header-action text">Hire me</a>
     </header>
+    <main>
+        <section>
+            <div class="about-me">
+                <div class="left">
+                    <img src="./assets/images/moi.png" srcset="./assets/images/moi.png 1x, ./assets/images/moi@2x.png 2x">
+                </div>
+                <div class="right">
+                    <img src="./assets/images/A.png" srcset="./assets/images/A.png 1x, ./assets/images/A@2x.png 2x">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
