finish first section of about page

--- a/about.html
+++ b/about.html
@@ -35,14 +35,48 @@
         <a href="#" class="action header-action text">Hire me</a>
     </header>
     <main>
-        <section>
+        <section id="about-me">
             <div class="about-me">
-                <div class="left">
+                <div class="about-me_image">
                     <img src="./assets/images/moi.png" srcset="./assets/images/moi.png 1x, ./assets/images/moi@2x.png 2x">
                 </div>
-                <div class="right">
+                <div class="about-me_content">
+                    <div class="about-me_desc">
+                        <h1 class="title about-me_title">About Me</h1>
+                        <p class="text about-me_text">
+                            Jeune sénégalaise vivant à Rabat au Maroc. <br><br>
+                            Graphic Designer de métier avec un BAC+4 et 5 années d’expériences diverses et variées. De Designer Print à Community Manager à Brand Designer à UI/UX Designer à Chargée de Com, j’ai pu me familiariser fortement à pas mal de postes dans mon cœur de métier. <br><br>
+                            Une grande passionnée, créative, optimiste et <br>surmotivée : vous me dites « challenge » je vous réponds « on commence quand » ?
+                        </p>
+                        <a href="#" class="text action about-me_action">Get to know me</a>
+                    </div>
                     <img src="./assets/images/A.png" srcset="./assets/images/A.png 1x, ./assets/images/A@2x.png 2x">
                 </div>
+
+
+               
+            </div>
+
+            <div class="join-me">
+                <a href="#" class="text action-social">
+                  Instagram
+                  <img src="./assets/icones/redirection.png" srcset="./assets/icones/redirection@2x.png 2x, ./assets/icones/redirection.png 1x">
+                </a>
+                <a href="#" class="text action-social">
+                  Behance
+                  <img src="./assets/icones/redirection.png" srcset="./assets/icones/redirection@2x.png 2x, ./assets/icones/redirection.png 1x">
+                </a>
+                <a href="#" class="text action-social">
+                  Linkedin
+                  <img src="./assets/icones/redirection.png" srcset="./assets/icones/redirection@2x.png 2x, ./assets/icones/redirection.png 1x">
+                </a>
+              </div>
+            
+        </section>
+
+        <section>
+            <div class="competence">
+                <h1 class="title competence_title">Compétences</h1>
             </div>
         </section>
     </main>
