section competence done

--- a/about.html
+++ b/about.html
@@ -70,13 +70,125 @@
                   Linkedin
                   <img src="./assets/icones/redirection.png" srcset="./assets/icones/redirection@2x.png 2x, ./assets/icones/redirection.png 1x">
                 </a>
-              </div>
+            </div>
             
         </section>
 
         <section>
-            <div class="competence">
-                <h1 class="title competence_title">Compétences</h1>
+            <div class="competences">
+                <h1 class="title competences_title">Compétences</h1>
+                <p class="text competences_text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                </p>
+
+                <div class="competences-container slider" style="
+                      --items: 6;
+                      --width: 24vw;
+                      --height: 380px;
+                    ">
+
+                <div class="list">
+                    <div class="competence" style="--position: 1">
+                      <div class="header">
+                        <div class="header-profile"></div>
+                        <div class="header-info">
+                          <p class="text header-name">Stratégie de contenue</p>
+                        </div>
+                      </div>
+                      <div class="competence-info">
+                        <h1 class="title competence-info-title">Lorem Ipsum</h1>
+                        <p class="text competence-info-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus totam quod recusandae debitis sint nesciunt et quae dolor nam dignissimos corrupti quidem nihil, iste blanditiis accusamus architecto dolorum a.
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="competence" style="--position: 2">
+                        <div class="header">
+                          <div class="header-profile"></div>
+                          <div class="header-info">
+                            <p class="text header-name">Stratégie de contenue</p>
+                          </div>
+                        </div>
+                        <div class="competence-info">
+                          <h1 class="title competence-info-title">Lorem Ipsum</h1>
+                          <p class="text competence-info-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus totam quod recusandae debitis sint nesciunt et quae dolor nam dignissimos corrupti quidem nihil, iste blanditiis accusamus architecto dolorum a.
+                          </p>
+                        </div>
+                      </div>
+
+                      <div class="competence" style="--position: 3">
+                        <div class="header">
+                          <div class="header-profile"></div>
+                          <div class="header-info">
+                            <p class="text header-name">Stratégie de contenue</p>
+                          </div>
+                        </div>
+                        <div class="competence-info">
+                          <h1 class="title competence-info-title">Lorem Ipsum</h1>
+                          <p class="text competence-info-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus totam quod recusandae debitis sint nesciunt et quae dolor nam dignissimos corrupti quidem nihil, iste blanditiis accusamus architecto dolorum a.
+                          </p>
+                        </div>
+                      </div>
+
+                      <div class="competence" style="--position: 4">
+                        <div class="header">
+                          <div class="header-profile"></div>
+                          <div class="header-info">
+                            <p class="text header-name">Stratégie de contenue</p>
+                          </div>
+                        </div>
+                        <div class="competence-info">
+                          <h1 class="title competence-info-title">Lorem Ipsum</h1>
+                          <p class="text competence-info-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus totam quod recusandae debitis sint nesciunt et quae dolor nam dignissimos corrupti quidem nihil, iste blanditiis accusamus architecto dolorum a.
+                          </p>
+                        </div>
+                      </div>
+
+                      <div class="competence" style="--position: 5">
+                        <div class="header">
+                          <div class="header-profile"></div>
+                          <div class="header-info">
+                            <p class="text header-name">Stratégie de contenue</p>
+                          </div>
+                        </div>
+                        <div class="competence-info">
+                          <h1 class="title competence-info-title">Lorem Ipsum</h1>
+                          <p class="text competence-info-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus totam quod recusandae debitis sint nesciunt et quae dolor nam dignissimos corrupti quidem nihil, iste blanditiis accusamus architecto dolorum a.
+                          </p>
+                        </div>
+                      </div>
+
+                      <div class="competence" style="--position: 6">
+                        <div class="header">
+                          <div class="header-profile"></div>
+                          <div class="header-info">
+                            <p class="text header-name">Stratégie de contenue</p>
+                          </div>
+                        </div>
+                        <div class="competence-info">
+                          <h1 class="title competence-info-title">Lorem Ipsum</h1>
+                          <p class="text competence-info-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus totam quod recusandae debitis sint nesciunt et quae dolor nam dignissimos corrupti quidem nihil, iste blanditiis accusamus architecto dolorum a.
+                          </p>
+                        </div>
+                      </div>
+                    
+                </div>
+                </div>
+
+            </div>
+        </section>
+        <section>
+            <div class="formations">
+                <h1 class="title formations_title">Formation</h1>
+                <p class="text formations_text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                </p>
             </div>
         </section>
     </main>
