about page done

--- a/about.html
+++ b/about.html
@@ -184,11 +184,56 @@
             </div>
         </section>
         <section>
-            <div class="formations">
-                <h1 class="title formations_title">Formation</h1>
-                <p class="text formations_text">
+            <div class="formation">
+                <h1 class="title formation-title">Formation</h1>
+                <p class="text formation-text">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                 </p>
+
+                <div class="card-wrapper">
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <a href="#" class="text action formation-action">DOWNLOAD CV</a>
             </div>
         </section>
     </main>
