--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <ul class="menu">
                 <li class="item"><a href="./index.html" class="link text">Home</a></li>
                 <li class="item"><a href="./about.html" class="link text" style="color: #FDC300;">About Me</a></li>
-                <li class="item"><a href="#" class="link text">Services</a></li>
+                <li class="item"><a href="./service.html" class="link text">Services</a></li>
                 <li class="item"><a href="#" class="link text">Portfolio</a></li>
                 <li class="item"><a href="#" class="link text">Contact</a></li>
             </ul>
