service detail page : code to handle data added layout done

--- a/service-detail.html
+++ b/service-detail.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/service.css">
+    <link rel="stylesheet" href="assets/css/service-detail.css">
+    <script src="./assets/js/service-detail.js" defer></script>
     <link rel="icon" href="./assets/images/logo-aestetik.svg" type="image/svg+xml">
     <title>Aestetik - SERVICES</title>
 </head>
@@ -34,6 +35,104 @@
 
         <a href="#" class="action header-action text">Hire me</a>
     </header>
-    
+
+    <main>
+        <section>
+            <div class="service">
+                <div class="service-image">
+                    <img src="assets/images/plume@2x.png" alt="Service Image">
+                </div>
+                <div class="service-content">
+                    <h1 class="title service-content-title">Service Title</h1>
+                    <p class="text service-content-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum</p>
+                    <div class="service-content-layout">
+                        <div class="service-content-item">
+                            <div class="placeholder"></div>
+                            <h2 class="title service-content-item-title">Service Item</h2>
+                            <p class="text service-content-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien. Donec eget</p>
+                        </div>
+                        <div class="service-content-item">
+                            <div class="placeholder"></div>
+                            <h2 class="title service-content-item-title">Service Item</h2>
+                            <p class="text service-content-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien. Donec eget</p>
+                        </div>
+                        <div class="service-content-item">
+                            <div class="placeholder"></div>
+                            <h2 class="title service-content-item-title">Service Item</h2>
+                            <p class="text service-content-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien. Donec eget</p>
+                        </div>
+                        <div class="service-content-item">
+                            <div class="placeholder"></div>
+                            <h2 class="title service-content-item-title">Service Item</h2>
+                            <p class="text service-content-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien. Donec eget</p>
+                        </div>
+                        <div class="service-content-item">
+                            <div class="placeholder"></div>
+                            <h2 class="title service-content-item-title">Service Item</h2>
+                            <p class="text service-content-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien. Donec eget</p>
+                        </div>
+                        <div class="service-content-item">
+                            <div class="placeholder"></div>
+                            <h2 class="title service-content-item-title">Service Item</h2>
+                            <p class="text service-content-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien. Donec eget</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="top-service">
+                <h1 class="title top-service-title">Notre Top</h1>
+                <p class="text top-service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                <div class="card-wrapper">
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                    <div class="formation-card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-footer">
+                            <p class="title card-footer-title">Brand Design</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="pricing">
+                <h1 class="title pricing-title">Pricing</h1>
+                <p class="text pricing-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
