--- a/service.html
+++ b/service.html
@@ -48,14 +48,14 @@
                         <div class="illustration"></div>
                         <div class="desc">
                             <p class="text desc-services-text">Design d'identité visuelle</p>
-                            <a href="./service-detail.html#design-identité-visuelle" class="text action desc-action">See more</a>
+                            <a href="./service-detail.html#design-identite-visuelle" class="text action desc-action">See more</a>
                         </div>
                     </div>
                     <div class="service">
                         <div class="illustration"></div>
                         <div class="desc">
                             <p class="text desc-services-text">Design print</p>
-                            <a href="./service-detail.html#./service-detail.html#design-print" class="text action desc-action">See more</a>
+                            <a href="./service-detail.html#design-print" class="text action desc-action">See more</a>
                         </div>
                     </div>
                     <div class="service">
@@ -69,14 +69,14 @@
                         <div class="illustration"></div>
                         <div class="desc">
                             <p class="text desc-services-text">Stratégie de contenu digital</p>
-                            <a href="./service-detail.html#stratégie-contenu-digital" class="text action desc-action">See more</a>
+                            <a href="./service-detail.html#strategie-contenu-digital" class="text action desc-action">See more</a>
                         </div>
                     </div>
                     <div class="service">
                         <div class="illustration"></div>
                         <div class="desc">
                             <p class="text desc-services-text">Accompagnement Personnalisé</p>
-                            <a href="./service-detail.html#accompagnement-personnalisé" class="text action desc-action">See more</a>
+                            <a href="./service-detail.html#accompagnement-personnalise" class="text action desc-action">See more</a>
                         </div>
                     </div>
                 </div>
