--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/about.css">
     <link rel="icon" href="./assets/images/logo-aestetik.svg" type="image/svg+xml">
+    <script src="./assets/js/app.js" defer></script>
     <title>Aestetik - ABOUT ME</title>
 </head>
 <body>
