--- a/service-detail.html
+++ b/service-detail.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/service-detail.css">
+    <script src="./assets/js/app.js" defer></script>
     <script src="./assets/js/service-detail.js" defer></script>
     <link rel="icon" href="./assets/images/logo-aestetik.svg" type="image/svg+xml">
     <title>Aestetik - SERVICES</title>
