page produit creer/done, page produit-detail creer

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
                 <li class="item"><a href="./index.html" class="link text">Home</a></li>
                 <li class="item"><a href="./about.html" class="link text" style="color: #FDC300;">About Me</a></li>
                 <li class="item"><a href="./service.html" class="link text">Services</a></li>
+                <li class="item"><a href="./produit.html" class="link text">Produits</a></li>
                 <li class="item"><a href="#" class="link text">Portfolio</a></li>
                 <li class="item"><a href="#" class="link text">Contact</a></li>
             </ul>
