Page contact created and done

--- a/service.html
+++ b/service.html
@@ -29,8 +29,8 @@
                 <li class="item"><a href="./about.html" class="link text">About Me</a></li>
                 <li class="item"><a href="./service.html" class="link text" style="color: #FDC300;">Services</a></li>
                 <li class="item"><a href="./produit.html" class="link text">Produits</a></li>
-                <li class="item"><a href="#" class="link text">Portfolio</a></li>
-                <li class="item"><a href="#" class="link text">Contact</a></li>
+                <li class="item"><a href="./portfolio.html" class="link text">Portfolio</a></li>
+                <li class="item"><a href="./contact.html" class="link text">Contact</a></li>
             </ul>
         </nav>
 
