add some correction to contact page

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,9 @@
                         <button class="action contact-form-action">Envoyer</button>
                     </form>
                 </div>
+                <img src="./assets/images/aestetik.png" srcset="./assets/images/aestetik.png 2x, ./assets/images/aestetik.png 1x" id="aestetik">
             </div>
+            
         </section>
         <section>
             <div class="follow-me">
